// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Offers /> renders a percentage offer 1`] = `
<div
  className="summary-row"
>
  <p
    className="d-flex m-0"
  >
    <span
      className="flex-grow-1"
    >
      <span>
        Discounts applied
      </span>
    </span>
    <span>
      <span>
        -$10.00
      </span>
    </span>
  </p>
  <p
    className="m-0 text-muted"
  >
    <span>
      <span>
        50%
      </span>
       discount provided by Pied Piper.
    </span>
  </p>
</div>
`;

exports[`<Offers /> renders an absolute value offer 1`] = `
<div
  className="summary-row"
>
  <p
    className="d-flex m-0"
  >
    <span
      className="flex-grow-1"
    >
      <span>
        Discounts applied
      </span>
    </span>
    <span>
      <span>
        -$10.00
      </span>
    </span>
  </p>
  <p
    className="m-0 text-muted"
  >
    <span>
      <span>
        $10.00
      </span>
       discount provided by Pied Piper.
    </span>
  </p>
</div>
`;
